Feat: Create ResponseMessage and update AuthController to enhance request responses. Refactor GlobalExceptionHandle, JwtService, and SecurityConfig.